Revision history for File::DataClass

0.11.
         - Fixed bug in F::DC::HashMerge. Will update undef to 0
         - Made EXTENSIONS available in F::DC::Schema
         - Replace F::DC::Util with F::DC::Functions
         - Made JSON untaint the data it reads
         - Moved F::DC::Storage::extensions to F::DC::Util
         - Fixed using F::DC::Storage::WithLanguage with F::DC::S::Any
         - F::DC::Schema::translate defaults to storage class Any
         - Fixed bug in update detection logic
         - Fixed F::MailAlias api
         - Added Schema attribute builder, deprecated ioc_obj
         - Added columns and has_column to F::DC::ResultSource
         - Do not allow setting attributes to undef in F::DC::IO
         - Optimised coercions in F::DC::Constraints
         - Optimised F::DC::Storage::WithLanguage::_get_key_and_newest
         - Added type coercion to LanguageType from Undef in
           F::DC::Schema::WithLanguage

0.10.380 2012-05-19
         - Added F::DC::Storage::Any
         - Fixed attribute merging in F::DC::Schema::BUILDARGS
         - Enhanced F::DC::IO close/rename logic
         - Enhanced leader selection in F::DC::Exception
         - Added F::DC::Storage::Any
         - F::DC::IO can coerce the filename from a coderef
         - POD updates

0.9.368  2012-04-17
         - Turned CPAN testing on
         - Stopped using lazy_build in favour of lazy and builder
         - Switched to using MX::Types
         - Exception_Class now a class attribute of F::DC::Constants
         - Updated inc::Bob to 1.3
         - API update F::DC::IO::rmtree now calls File::Path::remove_tree

0.8.360  2012-04-03
         - Stopped CPAN testing, no point in allowing it to continue

0.8.357  2012-04-03
         - Turned CPAN testing back on and exempted permission tests in io.t
           for MSWin32 and cygwin

0.8.355  2012-03-29
         - Turning CPAN testing off
         - Updated inc::Bob to 1.2

0.8.351  2012-03-29